--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-	"name": "todo-app-server",
-	"private": true,
-	"workspaces": [
-		"apps/*",
-		"packages/*"
-	],
-	"scripts": {
-		"dev": "npm run dev --workspaces",
-		"build": "npm run build --workspaces",
-		"check-types": "npm run check-types --workspaces",
-		"dev:native": "npm run dev --workspace native",
-		"dev:web": "npm run dev --workspace web",
-		"dev:server": "npm run dev --workspace server",
-		"db:push": "npm run db:push --workspace server",
-		"db:studio": "npm run db:studio --workspace server",
-		"db:generate": "npm run db:generate --workspace server",
-		"db:migrate": "npm run db:migrate --workspace server",
-		"db:start": "npm run db:start --workspace server",
-		"db:watch": "npm run db:watch --workspace server",
-		"db:stop": "npm run db:stop --workspace server",
-		"db:down": "npm run db:down --workspace server"
-	},
-	"packageManager": "npm@10.9.3"
+    "name": "server",
+    "main": "src/index.ts",
+    "type": "module",
+    "scripts": {
+        "build": "tsdown",
+        "dev": "tsx watch src/index.ts",
+        "start": "node dist/index.js",
+        "db:push": "prisma db push",
+        "db:studio": "prisma studio",
+        "db:generate": "prisma generate",
+        "db:migrate": "prisma migrate dev",
+        "db:start": "docker compose up -d",
+        "db:watch": "docker compose up",
+        "db:stop": "docker compose stop",
+        "db:down": "docker compose down"
+    },
+    "dependencies": {
+        "dotenv": "^17.2.1",
+        "zod": "^4.0.2",
+        "express": "^5.1.0",
+        "cors": "^2.8.5",
+        "@prisma/client": "^6.13.0"
+    },
+    "devDependencies": {
+        "tsdown": "^0.14.1",
+        "typescript": "^5.8.2",
+        "@types/express": "^5.0.1",
+        "@types/cors": "^2.8.17",
+        "tsx": "^4.19.2",
+        "@types/node": "^22.13.11",
+        "prisma": "^6.13.0"
+    }
 }
